fix(last-updated): add `vertical-align: middle`

--- a/src/components/pages/data/cards/last-updated-label.module.scss
+++ b/src/components/pages/data/cards/last-updated-label.module.scss
@@ -4,6 +4,7 @@
   @include type-size(100);
   margin: spacer(16) 0 spacer(8);
   font-weight: 500;
+  vertical-align: middle;
 
   img {
     margin-right: spacer(4);
